# opencb

./: .dockerignore  .gitignore  LICENSE  LICENSE.md  README.md  __init__.py  agpl.md  build.sh  cantor.py  conf.py  dockerfile  drun.sh  end_screen  index.rst  meta.yaml  pyproject.toml  requirements.txt  start_screen  test.sh  test.txt  test001.py
.github/workflows/: python-package-conda.yml
_build/doctrees/: environment.pickle  index.doctree  usage.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
_build/html/_sources/: index.rst.txt  usage.rst.txt
cantor/: cantor.py
cantor/models/: 16d1a-gs.py
dist_beta/: opencb-0.4.0b29-py2.py3-none-any.whl  opencb-0.4.0b31.whl  opencb-0.4.0b32.whl  opencb-0.4.0b33.whl  opencb-0.4.0b34-py2.py3-none-any.whl  opencb-0.4.0b35-py2.py3-none-any.whl  opencb-0.4.0b36-py2.py3-none-any.whl  opencb-0.4.0b37-py2.py3-none-any.whl  opencb-0.4.0b38-py2.py3-none-any.whl  opencb-0.4.0b39-py2.py3-none-any.whl  opencb-0.4.0b41-py2.py3-none-any.whl  opencb-0.4.0b42-py2.py3-none-any.whl  opencb-0.4.0b43-py2.py3-none-any.whl  opencb-0.5.0b1-py2.py3-none-any.whl  opencb-0.5.0b2-py2.py3-none-any.whl  opencb-0.5.0b3-py2.py3-none-any.whl  opencb-0.5.0b4-py2.py3-none-any.whl  opencb-0.5.0b5-py2.py3-none-any.whl  opencb-0.5.0b6-py2.py3-none-any.whl  opencb-0.5.0b64-py2.py3-none-any.whl  opencb-0.5.0b7-py2.py3-none-any.whl  opencb-0.5.0b74-py2.py3-none-any.whl  opencb-0.5.0b75-py2.py3-none-any.whl  opencb-0.5.0b77-py2.py3-none-any.whl  opencb-0.5.0b8-py2.py3-none-any.whl  opencb-0.5.0b9-py2.py3-none-any.whl  opencb-0.6.0b17-py2.py3-none-any.whl  opencb-0.6.0b3-py2.py3-none-any.whl  opencb-0.6.0b4-py2.py3-none-any.whl  opencb-0.6.0b6-py2.py3-none-any.whl  opencb-0.6.0b7-py2.py3-none-any.whl  silky-0.6.0b19-py2.py3-none-any.whl  silky-0.6.0b20-py2.py3-none-any.whl
docs/: requirements.txt
docs/beta/: opencb-0.5.0b54-py2.py3-none-any.whl  opencb-0.5.0b9-py2.py3-none-any.whl
docs/source/: conf.py  index.rst
docs/source/opencb/: opencb-0.5.0b55-py2.py3-none-any.whl
opencb/: __about__.py  iteration.py
opencb.bak/: __about__.py
opencb.bak/models/: general_dev2.py
opencb.bak/routines/: horse_routine.py  iteration.py
opencb/games/: __init__.py  forest.py
opencb/models/: __init__.py  camel.py  general.py  general_dev.py  general_dev2.py
opencb/models/bend/: general.bend
opencb/routines/: __init__.py  grizzlybear_routine.py  iteration.py
opencb/src/opencb/: __about__.py
opencb/tests/: __init__.py  test_general.py
opencb/utilities/: __init__.py  game.py
silky/: __about__.py  forest.py  game.py  iteration.py  model.py  model2.py.bak  screen.py  train.py
source/: conf.py
src/: __init__.py
src/models/: __init__.py  camel.py  d16a1gs.py  d8a4gs.py  general.py  general_dev.py  grizzlybear.py  horse.py
src/opencb/: __about__.py  __init__.py
src/opencb/games/: __init__.py
src/opencb/models/: __init__.py  general.py  general_dev.py
src/routines/: __init__.py  grizzlybear_routine.py  horse_routine.py
src/utilities/: __init__.py  game.py  screen.py  screenshot
tests/: test001.py  test_camel.py  test_game.py  test_general.py  test_general_dev.py  test_grizzlybear.py  test_horse.py  testing.py
(+9 files in other folders)
