[tool.poetry]
name = "cantor"
version = "0.2.2"
description = "Open-Source Computer Behavior"
authors = ["Octakitten <raspberry2425@gmail.com>"]
license = "GNU Affero Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.26.1"
xlib = ">=0.21"
Pillow = ">=10.1.0"
torch = ">=2.1.0"
pytest = ">=7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
