[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencb"
dynamic = ["version"]
description = "Open-Source Computer Behavior"
authors = [
  { name = "octakitten", email = "raspberry2425@gmail.com"},
  ]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.26.1",
    "xlib>=0.21",
    "Pillow>=10.1.0",
    "torch>=2.1.0",
    "pytest>=7.4.3",
]

[project.urls]
Homepage = "https://github.com/octakitten/opencb"
Issues = "https://github.com/octakitten/opencb/issues"
Wiki = "https://github.com/octakitten/opencb/wiki"

[tool.hatch.version]
path = "opencb/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/OpenCB tests}"

[tool.coverage.run]
source_pkgs = ["opencb", "tests"]
branch = true
parallel = true
omit = [
  "src/opencb/__about__.py",
]

[tool.coverage.paths]
opencb = ["src/opencb", "*/opencb/src/opencb"]
tests = ["tests", "*/opencb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
