[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silky"
dynamic = ["version"]
description = "Open-Source Computer Behavior and Memory"
authors = [
  { name = "octakitten", email = "raspberry2425@gmail.com"},
  ]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.26.1",
    "xlib>=0.21",
    "Pillow>=10.1.0",
    "torch==2.4.1",
    #"tensorplus>=0.0.1",
    "matplotlib>=3.9.0",
    "datasets>=3.0.0",
    "torchvision>=0.10.0",
]

[project.packages]
include = [
    { include = "silky" },
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "sphinx>=7.3.0",
  "sphinx-autoapi>=3.1.0",
  "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/octakitten/silky"
Issues = "https://github.com/octakitten/silky/issues"
Wiki = "https://github.com/octakitten/silky/wiki"

[tool.hatch.version]
path = "silky/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/silky tests}"

[tool.coverage.run]
source_pkgs = ["silky", "tests"]
branch = true
parallel = true
omit = [
  "src/silky/__about__.py",
]

[tool.coverage.paths]
opencb = ["silky"]
tests = ["tests", "*/silky/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
